--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ text-decoration: none;
 }
 
 /* Navigation Link AutoLayout */
-.nav-links {
+.nav-links ul {
     display: flex;
 align-items: center;
 justify-content: flex-end;
@@ -424,11 +424,12 @@ margin-left: 7rem;
   margin-inline: auto;
   display: flex;
   gap: 1rem;
+  list-style: none;
 }
 
 .connectionLink {
   padding: 1rem;
-  background-color: #FC78CE;
+  background-color: #212326;
   border-radius: .5rem;
   text-decoration: none;
 
