--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -204,6 +204,10 @@ body {
     color: #FC78CE;
 }
 
+.reference2 {
+    color: #EFEAE4;
+}
+
 .introHeading {
   margin-left: 15rem;
   margin-right: 13rem;
@@ -711,8 +715,8 @@ align-self: center;
   gap: 5rem;
   justify-content: center;
   align-items: top;
-  margin-left: 21.25rem;
-  margin-right: 21.25rem;
+  margin-left: 20.5rem;
+  margin-right: 20.5rem;
   padding-top: 6rem;
 
 }
