--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -1060,15 +1060,288 @@ font-family: 'VCR OSD Mono', monospace;
   margin-top: 9rem;
 }
 
-
-
-
-
-
-.bigSpaceTemp {
-  height: 100rem;
+.reflection {
+  margin-left: 15rem;
+  margin-right: 13rem;
+  margin-top: 15rem;
 }
 
+.reflection header {
+  margin-bottom: 2.5rem;
+}
+
+.reflection .paragraphStyle2 {
+  color: #A3A19E;
+}
+
+.userQuote {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 2rem;
+  margin-left: 6rem;
+  margin-right: 6rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+
+.userQuote h2 {
+  line-height: 130%;
+}
+
+.userQuote video {
+  width: 56%;
+  flex: 1;
+}
+
+.learnings {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.learnings h2 {
+  padding: 1rem;
+    font-family: 'Halyard Display Book', sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+  font-size: 2.25rem;
+}
+
+.learnHead {
+  position: sticky;
+  top: 20rem;
+  display: flex;
+  border: #FFFFFF 1px solid;
+  border-radius: 1rem;
+  flex: 1;
+  height: 100%;
+  padding-left: 1rem;
+  align-items: center;
+}
+
+.learnHead img {
+  width: 2rem;
+  height: 2rem;
+}
+
+.learnings ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 1rem;
+  flex: 1;
+}
+
+.learnings li {
+  padding: 1rem;
+  border: #FFFFFF 1px solid;
+  border-radius: .5rem;
+
+  font-family: 'Halyard Display', sans-serif;
+    font-weight: 200;
+    font-style: italic;
+    font-display: swap;
+    font-size: 1.5rem;
+    color: #A3A19E;
+}
+
+
+.relatedProjects {
+  margin-left: 15rem;
+  margin-right: 13rem;
+  margin-top: 8rem;
+  margin-bottom: 20rem;
+}
+
+.relatedProjects header {
+  margin-bottom: 1rem;
+}
+
+.relatedProjects img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+  max-height: 25rem;
+   transition: transform 0.5s ease-out;
+}
+
+.relatedProjectContainer {
+  overflow: hidden;
+  border-radius: 1rem;
+}
+
+.relatedProjects img:hover {
+  transform: scale(1.06); /* Slightly expand on hover */
+  z-index: 2;
+}
+
+.tags {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.tags li {
+  padding: .5rem 1.5rem;
+  border-radius: 2rem;
+  background-color: #212326;
+
+  font-family: 'Halyard Display Book', sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+    font-size: 1.5rem;
+    color: #EFEAE4;
+}
+
+.project02 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.project02 h3, .seeProject {
+  text-decoration: underline;
+  font-family: 'VCR OSD Mono', monospace;
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+    font-size: 1.5rem;
+    color: #EFEAE4;
+}
+
+.project02 h3:hover, .seeProject:hover {
+  text-decoration: none;
+}
+
+/* Prefooter Styles */
+.preFooter {
+  position: relative;
+    background: #131416;
+    color: #EFEAE4;
+    margin-inline: auto;
+    margin-left: 15rem;
+    margin-right: 14.5rem;
+    z-index: 3;
+}
+
+.label {
+    font-family: 'VCR OSD Mono', monospace;
+    font-size: 2.25rem;
+    font-weight: normal;
+    color: #EFEAE4;
+    align-items: baseline;
+    margin-bottom: 4rem;
+}
+
+.arrowBottomLeft {
+  height: 1.5rem;
+  width: auto;
+  padding-bottom: .15rem;
+  padding-left: 0.875rem;
+}
+
+.connectBtn {
+  margin-inline: auto;
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+}
+
+.connectionLink {
+  padding: 1rem;
+  background-color: #212326;
+  border-radius: .5rem;
+  text-decoration: none;
+
+    font-family: 'VCR OSD Mono', monospace;
+    font-size: 2rem;
+    font-weight: normal;
+    color: #EFEAE4;
+    align-items: baseline;
+    font-style: normal;
+}
+
+.connectionLink:hover {
+  background-color: #EFEAE4;
+  color: #131416;
+  transition: background-color 0.3s ease-out;
+}
+
+/* Poro image settings */
+.poro {
+  width: 13rem;
+  height: auto;
+  margin-left: auto;
+  transform: translateY(-7rem);
+}
+
+.connectBtn {
+  display: flex-end;
+}
+
+.follow {
+  padding-bottom: 7.5rem;
+}
+
+.connections {
+  padding-bottom: 6rem;
+}
+
+/* Footer */
+
+.siteInfo {
+  font-family: 'Halyard Display', sans-serif;
+    font-weight: 100;
+    font-style: lighter;
+    font-display: swap;
+
+  margin-inline: auto;
+  display: flex;
+  justify-content: space-between;
+    margin-left: 15rem;
+    margin-right: 14.5rem;
+    padding-top: 3rem;
+    padding-bottom: 3.5rem;
+    font-size: 1.25rem;
+}
+
+
+
+
+
+
+
+
+
+/* typewriter effect */
+.learnHead h2::after {
+  content: "";
+  margin-left: .5rem;
+  transform: translateY(0.25rem);
+  width: .25rem;
+  height: 2rem;
+  background: #EFEAE4;
+  display: inline-block;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.learnHead h2::after {
+    animation: cursor-blink 1.5s ease-in-out infinite;
+}
 
 /* Persona Profile Slider */
 
