--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -420,7 +420,7 @@ margin: 0 auto;
 .process1 {
   margin-left: 15rem;
   margin-right: 13rem;
-  margin-top: 12rem;
+  margin-top: 12.5rem;
 }
 
 .process1 h2 {
@@ -591,7 +591,7 @@ margin: 0 auto;
 .process2 {
   margin-left: 15rem;
   margin-right: 13rem;
-  margin-top: 7.5rem;
+  margin-top: 12.5rem;
 }
 
 .process2 h2 {
@@ -780,18 +780,43 @@ align-self: center;
 .articleIdeation {
   margin-left: 15rem;
   margin-right: 13rem;
-  margin-top: 6rem;
+  margin-top: 12.5rem;
 }
 
 .articleIdeation header {
-  margin-bottom: 2.5rem;
+  margin-bottom: 5rem;
+  padding: 1rem;
+}
+
+.processHeading {
+  display: flex;
+  border: #FFFFFF 1px solid;
+  border-radius: 1rem;
+  flex: 1;
+  height: 100%;
+  padding-left: 1rem;
+  align-items: center;
+}
+
+.processHeading img {
+  width: 2rem;
+  height: 2rem;
+}
+
+.processHeading h2 {
+  margin-left: 1rem;
+    font-family: 'Halyard Display Book', sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+  font-size: 2.25rem;
 }
 
 .ideation {
   padding-top: 1rem;
   display: flex;
-  align-items: center;
-  gap: 8rem;
+  align-items: top;
+  gap: 3rem;
 }
 
 .ideation img {
@@ -799,12 +824,20 @@ align-self: center;
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+.ideationFigure {
   flex: 1;
 }
 
 .ideationText {
   flex: 1;
-  min-width: 21rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;  
+}
+
+.ideationText p {
   font-size: 1.5rem;
     font-family: 'Halyard Display', sans-serif;
     font-weight: 200;
@@ -813,18 +846,21 @@ align-self: center;
     color: #A3A19E;  
 }
 
-#right {
-  margin-right: 4rem;
-}
-
-#left {
-  margin-left: 4rem;
+.ideationText h3 {
+  font-size: 2.5rem;
+  font-family: 'Halyard Display', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;  
 }
 
 #space2 {
-  margin-top: 2.5rem;
   width: 100%;
-  height: 100%;
+  height: .5px;
+  background-color: #EFEAE4;
+  opacity: 50%;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .designChallenge {
@@ -1350,6 +1386,33 @@ font-family: 'VCR OSD Mono', monospace;
 }
 
 .learnHead h2::after {
+    animation: cursor-blink 1.5s ease-in-out infinite;
+}
+
+/* typewriter effect */
+.processHeading h2::after {
+  content: "";
+  margin-left: .5rem;
+  transform: translateY(0.25rem);
+  width: .25rem;
+  height: 2rem;
+  background: #EFEAE4;
+  display: inline-block;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.processHeading h2::after {
     animation: cursor-blink 1.5s ease-in-out infinite;
 }
 
