--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -296,6 +296,7 @@ body {
 
 .affinityMap {
   margin-top: 2.5rem;
+  margin-bottom: 5rem;
   justify-content: center;
   display: flex;
   flex-direction: column;
@@ -306,7 +307,7 @@ body {
   margin-bottom: 1.5rem;
 }
 
-.datasets {
+.datasets .mockupImage {
   margin-bottom: 1.5rem;
 }
 
@@ -315,7 +316,7 @@ body {
   position: sticky; 
   top: -25rem;      /* adjust to match your header height */
   z-index: 1;     /* lower than .quote */
-  margin-top: 2.5rem;
+  margin-top: 5rem;
 }
 
 .gatheringData figcaption {
