--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -2235,7 +2235,7 @@ font-size: 1rem;
 .quoteText blockquote {
   font-size: 3.5rem;
   width: 100%;
-  height: fit-content;
+  height: 30rem
 }
 
 .introSummary {
