--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -364,6 +364,7 @@ body {
   padding-top: 2.25%;
   padding-bottom: 2.25%;
   justify-content: space-between;
+  background-color: #FC78CE;
 }
 
 .quoteText {
@@ -2234,8 +2235,6 @@ font-size: 1rem;
 
 .quoteText blockquote {
   font-size: 3.5rem;
-  width: 100%;
-  height: 30rem
 }
 
 .introSummary {
