--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -354,7 +354,7 @@ body {
   max-width: 100%;
   border-radius: 1rem;
   box-sizing: border-box;
-  gap: 4rem;
+  gap: 6rem;
 
   display: flex;
   align-items: flex-end;
@@ -407,7 +407,7 @@ margin: 0 auto;
 
 .keyPoint {
   padding-top: 3.5rem;
-  padding-bottom: 4.5rem;
+  padding-bottom: 3.5rem;
   gap: 1.5rem;
 
   background-color: #1E2022;
@@ -2192,8 +2192,13 @@ font-size: 1rem;
 }
 
 .gatheringDataHeaders h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  line-height: 130%;
   margin-top: .5rem;
+}
+
+.gatheringDataHeaders {
+  gap: 0;
 }
 
 .gatheringDataHeaders h3, .paragraphStyle2 {
@@ -2206,7 +2211,6 @@ font-size: 1rem;
 
 .line-break {
   display: block;
-  margin-top: 2rem;
 }
 
 .affinityMap {
