--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -409,7 +409,7 @@ margin: 0 auto;
   padding-bottom: 3.5rem;
   gap: 1.5rem;
 
-  background-color: #1E2022;
+  background-color: #1E1F22;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
