--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -667,7 +667,7 @@ margin: 0 auto;
   padding-right: 3.5rem;
   padding-bottom: 2rem;
   border-radius: 1rem;
-  background-color: #1E2022;
+  background-color: #1E1F22;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
