--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -155,9 +155,9 @@ body {
 }
 
 .sectionDivider {
-    background-color: #EFEAE4;
+    background-color: #737170;
     height: 0.5px;
-    opacity: 25%;
+    opacity: 100%;
     width: auto;
     margin-bottom: 1.5rem;
 }
@@ -1824,9 +1824,6 @@ font-size: 1rem;
 
 }
 
-
-
-
 /* Tablet styles */
 
 @media (max-width: 780px) {
@@ -2125,7 +2122,7 @@ font-size: 1rem;
     font-size: 1rem;
 }
 
-
+}
 
 /*mobile screens*/
 
@@ -2633,4 +2630,29 @@ font-size: 1.25rem;
 
 }
 
+/* Base class — always on the element */
+.fadeinup {
+  opacity: 0;
+  transform: translate3d(0, 20px, 0); /* start slightly below */
+}
+
+/* Keyframes for the animation */
+@keyframes fadeInUpCustom {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 2rem, 0);
+    transform: scale(0.95);
+  }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    transform: scale(1);
+  }
+}
+
+/* Animation trigger class — added by JS */
+.animateUp {
+  animation-name: fadeInUpCustom;
+  animation-duration: 1s;
+  animation-fill-mode: forwards; /* keeps final state after animation */
 }
