--- a/styles.css
+++ b/styles.css
@@ -674,6 +674,12 @@ body {
 
 /* edit animation speeds for this screen*/
 @media (max-width: 540px) {
+
+  .fadeinup {
+    opacity: 1 !important;
+    transform: none !important;
+  }
+
     .subTitle p {
         font-size: 2.5rem;
     }
