--- a/project1/artofvisualdata.css
+++ b/project1/artofvisualdata.css
@@ -1,5 +1,25 @@
 @import url('../portfolioStyles/fontcss.css');
 
+.loadingContainer {
+  position: fixed;
+  z-index: 25;
+  display: flex;            /* enables flexbox */
+  justify-content: center;  /* horizontal centering */
+  align-items: center;      /* vertical centering */
+  width: 100%;
+  height: 100%;
+  background-color: #131416;
+}
+
+.loadingVideo {
+  width: 12.5%;
+  height: auto;
+  transition: transform 0.3s ease-out;
+}
+
+.loadingVideo:hover {
+  transform: scale(1.05);
+}
 
 /* NavBar typographic settings */
 .logo {
@@ -89,7 +109,7 @@ list-style: none;
 }
 
 .fixedContainer {
-    z-index: 1000;
+    z-index: 15;
     position: fixed;
     width: 100%;
 
