--- a/styles.css
+++ b/styles.css
@@ -415,8 +415,6 @@ margin-left: 7rem;
   margin-left: 15rem;
   margin-right: 14.5rem;
   padding-top: 10.5rem;
-  position: sticky;
-  top: -250rem;
 }
 
 /* prefooter settings */
@@ -708,10 +706,11 @@ body {
   width: 50%;
   }  
 
+  /*
   .fadeinup {
     opacity: 1 !important;
     transform: none !important;
-  }
+  } */
 
     .subTitle p {
         font-size: 2.5rem;
