--- a/artofvisualdata/artofvisualdata.css
+++ b/artofvisualdata/artofvisualdata.css
@@ -27,6 +27,38 @@
   animation: loadingContainer .3s ease-out forwards;
 }
 
+/* THIS IS THE ASIDE ELEMENT FOR PAGE NAVIGATION */
+.pageNavigation {
+  position: sticky;
+  top: 30%;
+  display: flex;
+  margin-left: 1rem;
+  justify-content: left;
+}
+
+.navigationLinks {
+  display: flex;
+  flex-direction: column;
+}
+
+.navigationLinks ul li {
+  list-style: none; 
+  margin: 1rem;
+}
+
+.navigationLinks ul li a {
+  text-decoration: none;
+  color: #837C7C;
+  
+  font-family: 'Halyard Display', sans-serif;
+  font-size: 1.25rem;
+  font-style: light;
+  font-weight: 200;
+  line-height: normal;
+}
+
+/* END */
+
 /* NavBar typographic settings */
 .logo {
     font-family: 'Hydrophilia Iced', monospace;
@@ -2157,10 +2189,11 @@ font-size: 1rem;
   width: 50%;
   }
 
+  /*
   .fadeinup {
     opacity: 1 !important;
     transform: none !important;
-  }  
+  } */ 
 
 .nav-links ul {
   display: flex;
